--- a/.github/workflows/deploy-to-ibm.yml
+++ b/.github/workflows/deploy-to-ibm.yml
@@ -5,7 +5,7 @@ on:
     branches:
     - master
   schedule:
-    - cron: "0 21 * * 4"
+    - cron: "0 21 * * *"
 
 jobs:
   deploy:
@@ -53,9 +53,9 @@ jobs:
         cat > manifest.yml << EOF
         ---
         applications:
-        - name: v2fly
-          memory: 128M
-          disk_quota: 128M
+        - name: yesibm160
+          memory: 256M
+          disk_quota: 1024M
           routes:
           - route: ${{ secrets.CF_ROUTE_IBM }}
           command: ./v2ray
